# last-sprint

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  webui.Dockerfile
backend/: Dockerfile  chroma_client.py  entrypoint.sh  pyproject.toml
backend/api/: settings.py
backend/app/: Dockerfile
backend/app/app/: asgi.py  settings.py  urls.py
backend/app/llm_app/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  views.py
backend/app/llm_app/migrations/: 0001_initial.py  0002_initial.py  0003_collection_icon.py
backend/app/llm_app/services/src/: chroma_client.py  db_initializer.py  embedder.py  llm.py  main.py  utils.py
backend/app/users/: admin.py  models.py
backend/app/users/migrations/: 0001_initial.py  0002_alter_user_subscription.py  0003_remove_user_subscription_subscription_user_and_more.py  0004_alter_subscription_user.py
backend/src/: chroma_client.py  db_initializer.py  embedder.py  llm.py  llm_agent.py  main.py
client/: .dockerignore  Dockerfile
client/app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/app/api/: collections.js  instances.js  socket.js
client/app/helpers/: Generator.js  Structures.js
client/app/src/: App.js  App.jsx  main.jsx
client/app/src/pages/: ChatPage.jsx  ErrorPage.jsx
frontend/: Dockerfile  webui.py
model-backend/: Dockerfile  requirements.txt
model-backend/src/: llm_agent.py  main.py
src/: chat.py  chroma_client.py  embedder.py  llm.py  llm_agent.py  main.py  summarizer.py  webui.py
(+23 files in other folders)
